--- a/README.Rmd
+++ b/README.Rmd
@@ -27,9 +27,9 @@ It is not a complete replacement for the [Exercism CLI](http://exercism.io/clien
 
 - fetch problems
 - skip problems
-- submit solutions
-- check status/progress
-- fetch previous submissions
+- submit solutions (not implemented yet)
+- check status/progress (not implemented yet)
+- fetch previous submissions (not implemented yet)
 
 ## Install `exercism`
 
@@ -37,9 +37,9 @@ It is not a complete replacement for the [Exercism CLI](http://exercism.io/clien
 devtools::install_github("jonmcalder/exercism")
 ```
 
-## RStudio gadgets
+## RStudio gadget (not implemented yet)
 
-The above mentioned package functionality is also accessible via an RStudio gadget.
+The above mentioned (core) package functionality is also accessible via an RStudio gadget.
 
 ## Contribute
 
