--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ output:
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "README-"
+  fig.path = "man/figures"
 )
 ```
 
@@ -25,21 +25,66 @@ This package is designed to make it easy for R users to work through the R track
 
 It is not a complete replacement for the [Exercism CLI](http://exercism.io/clients/cli), but instead provides easy access to the most commonly used CLI functionality:
 
-- fetch problems
-- skip problems
-- submit solutions (not implemented yet)
-- check status/progress (not implemented yet)
-- fetch previous submissions (not implemented yet)
+- [x] fetch problems
+- [x] skip problems
+- [ ] submit solutions
+- [ ] check status/progress
+- [ ] fetch previous submissions
 
-## Install `exercism`
+## Install
 
 ```
 devtools::install_github("jonmcalder/exercism")
+library(exercism)
 ```
 
-## RStudio gadget (not implemented yet)
+## Setup
 
-The above mentioned (core) package functionality is also accessible via an RStudio gadget.
+#### Set your API key
+
+Go to [exercism.io -> account -> API key](http://exercism.io/account/key)
+
+<img src="man/figures/api_key.png" />
+
+Copy your API key (highlighted above in orange), and then run:
+
+```
+set_api_key("<your API key>")
+```
+
+#### Set exercism path
+```
+set_exercism_path("<path_to_your_exercism_directory>")
+```
+
+Once you've set your API key and exercism path these will be remembered for future R sessions.
+
+## Usage
+
+Get the next problem for the R track:
+
+```
+fetch_next()
+```
+
+Get a specific problem for the R track (e.g. "leap"):
+
+```
+fetch_problem(slug = "leap")
+```
+
+Skip a specific problem for the R track (e.g. "bob"):
+
+```
+skip_problem(slug = "bob")
+```
+
+(note that you may specify a different language track via the `track_id` argument)
+
+## RStudio Addin
+
+The core functionality mentioned above is also accessible via an RStudio Addin. 
+You can access it via the Addins menu, or by running `exercism_addin()`.
 
 ## Contribute
 
