--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 [![Project Status: WIP ? Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](http://www.repostatus.org/badges/latest/wip.svg)](http://www.repostatus.org/#wip)
 [![Build Status](https://travis-ci.org/jonmcalder/exercism.svg?branch=master)](https://travis-ci.org/jonmcalder/exercism)
+[![Build Status](https://ci.appveyor.com/api/projects/status/github/jonmcalder/exercism?branch=master&svg=true)](https://ci.appveyor.com/project/jonmcalder/exercism)
 [![codecov](https://codecov.io/gh/jonmcalder/exercism/branch/master/graph/badge.svg)](https://codecov.io/gh/jonmcalder/exercism)
 
 
